--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,26 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
   color: #00b7ff;
 }
 .index {
-  background-image: url(../images/index.jpg);
+  /* background-image: url(../images/index.jpg);
   width: 100%;
   background-size: 100%;
   overflow: hidden;
   height: 100%;
-  position: fixed;
-  background-repeat: no-repeat;
+  position: fixed; */
+}
+.index img {
+  left: 0;
+  width: 50%;
+  margin: 0 auto;
+  display: block;
+  top: 24%;
+  position: absolute;
+  right: 0;
 }
