--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,14 +7,7 @@ body {
 a {
   color: #00b7ff;
 }
-.index {
-  /* background-image: url(../images/index.jpg);
-  width: 100%;
-  background-size: 100%;
-  overflow: hidden;
-  height: 100%;
-  position: fixed; */
-}
+
 .index img {
   left: 0;
   width: 50%;
@@ -23,4 +16,11 @@ a {
   top: 24%;
   position: absolute;
   right: 0;
+}
+p {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  top: 24%;
+  position: relative;
 }
