--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 <div class="index">
 <img src="images/index.jpg">
 <p>Using REST API Development</p>
+<p><a href="/api/secure-book-api-json">API Json</a></p>
 </div>
 
 </body>
